--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <section class="download">
-      <div class="desc">
+      <div class="download-desc">
         <h2>See the sky even better than your own eyes can</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
@@ -45,7 +45,7 @@
           adipisci totam consequatur asperiores porro eligendi. Commodi
           repudiandae labore voluptate! Laborum.
         </p>
-        <div class="btn">
+        <div class="dowload-btn">
           <button>Download Now</button>
         </div>
       </div>
